Added sanity checks for file write operations
2021-05-21 Version   2.3.0: Added the --debug-file option
2021-05-07 Version   2.2.0: Bug fix: --debug does not store any information in $TMPDIR anymore
                            To locally store the retrieved certificates in debug mode the option --debug-cert has to be specified
2021-05-06 Version   2.1.4: Bug fix in the handling of Qualy's SSL Lab command line options
2021-05-05 Version   2.1.3: Bug fix in the Qualy's SSL Lab check of non-reachable machines
2021-04-30 Version   2.1.2: Add domain if FQDN is missing
2021-04-29 Version   2.1.1: Correct handling of subdomains with underscores
2021-04-25 Version   2.1.0: Added an option to hide performance data
                            Fixed a bug in the critical and warning output when the CN is not available
2021-04-07 Version   2.0.1: Fixed a bug in renegotiation checks with STARTTLS
2021-03-29 Version   2.0.0: Fixed the documentation of various options
                            The host name must now always match with the certificate
                            Short options can be grouped (e.g., -vs -c 10 -w 15)
                            Different verbosity levels can now be specified (-v can be used more than once)
                            Added the --resolve option to specify a custom IP for the checked host
2021-03-25 Version 1.146.0: Added --all to enable oll the optional checks
                            Fixed a bug in the processing of client certificate requirements
                            Improved the error handling in case a TLS connection is not possible
2021-03-15 Version 1.145-0: Fix in the parsing of OpenSSL version
2021-03-14 Version 1.144.0: Getting rid of the man dependency
2021-03-12 Version 1.143.0: Better handling of the timeout
                            Checks ciphers with nmap (--check-ciphers and --check-ciphers-warnings)
                            Checks oll the supplied OCSP URIs