@@ -115,3 +115,4 @@ Thanks:
 * Many thanks to chornberger-c2c (https://github.com/chornberger-c2c) for the critical and warning output fix
 * Many thanks to Claus-Theodor Riegg (https://github.com/ctriegg-mak) for the domain with underscores fix
 * Many thanks to Ed Sabol (https://github.com/esabol) for the FQDN patch
+* Many thanks to Igor Mironov (https://github.com/mcs6502) for the LibreSSL patch
