@@ -1,4 +1,5 @@
-Added sanity checks for file write operations
+2021-05-28 Version   2.3.1: Compatibility fixes for LibreSSL on macOS
+                            Added sanity checks for file write operations
 2021-05-21 Version   2.3.0: Added the --debug-file option
 2021-05-07 Version   2.2.0: Bug fix: --debug does not store any information in $TMPDIR anymore
                             To locally store the retrieved certificates in debug mode the option --debug-cert has to be specified
